# AMDNet

./: .gitignore  LICENSE  README.md  evaluate_AMDnet.py  pyproject.toml  requirements.txt  run_grayskull.py  train_AMDnet.py
amdnet/: __init__.py  callbacks.py  evaulateAMDNet.py  hierarch_model.py  meta.yaml  train_AMDNet.py
amdnet/data/: crystal.py  graph.py
amdnet/layers/: __init__.py
amdnet/layers/graph/: base.py  cgcnn.py  megnet.py  schnet.py
amdnet/layers/readout/: linear.py  set2set.py
amdnet/tests/: test_train_AMDNet.py
amdnet/utils/: descriptor.py  preprocessing.py
data/: material_data.pkl  motif_graph.pkl
data/motif_generator/: get_motif.py
data/motif_generator/cif/: Mn2V2O7_mp-19142_primitive.cif
data/motif_generator/motif_analyzer/: dataset.py  feature.py  graph.py  motifdata.py  site.py
model/: activations.py  callbacks.py  hierarch_model.py  models.py
model/data/: crystal.py  graph.py
model/layers/: __init__.py
model/layers/graph/: base.py  cgcnn.py  megnet.py  schnet.py
model/layers/readout/: set2set.py
model/utils/: metrics.py
save/: bandgap_AMDNet.hdf5.json
