[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "amdnet"
authors = [
    {name = "Sandro Hauri", email = "qiminyan@temple.edu"},
    {name="Sterling Baird", email = "sterling.baird@utah.edu"},
    ]
readme = "README.md"
classifiers = ["License :: OSI Approved :: BSD License"]
dynamic = ["version", "description"]

requires-python = ">=3.7,<3.9"

dependencies = [
    "keras==2.7.0",
    "matminer==0.7.4",
    "matplotlib==3.5.1",
    "monty==2021.12.1",
    "networkx==2.6.3",
    "numpy==1.22.0",
    "pandas==1.3.5",
    "pybel",
    "pymatgen==2022.1.9",
    "robocrys==0.2.7",
    "scipy==1.7.3",
    "tensorflow",
    "tqdm==4.62.3",
]

[project.urls]
Home = "https://github.com/sparks-baird/amdnet"
